0.4 + API update + Documentation update + SQL file update
Updated API
- merged login.php, register.php and api.php to one file,
- added calls to start test, store answer to question
- added calls to login/register
Updated Swagger API Doc, still wip version, ready to be used for testing purposes during implementation
Updated DB - more questions are now ready, added English title of question area, SQL file is included in commit for testing purposes
